<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_total_view">Bill Total</string>
    <string name="bill_total">Enter bill amount here</string>
    <string name="tenTextView">10%</string>
    <string name="fifteenTextView">15%</string>
    <string name="twentyTextView">20%</string>
    <string name="tipTextView">Tip</string>
    <string name="zero">0.00</string>
    <string name="totalTextView">Total</string>
    <string name="customTextView">Custom</string>
    <string name="customSeekBarEditText">17%</string>
</resources>
